<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/personal_details">

        <EditTextPreference
            app:defaultValue="Satoshi Nakamoto"
            app:key="@string/pref_key_name"
            app:title="@string/your_name"
            app:useSimpleSummaryProvider="true" />



    </PreferenceCategory>

    <PreferenceCategory app:title="@string/normal_task">

        <EditTextPreference
            android:key="@string/pref_key_normal_task_reps"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/Number_of_reps"
            android:inputType="numberDecimal"
            app:defaultValue="5"

            app:useSimpleSummaryProvider="true"/>

        <EditTextPreference
            android:key="@string/pref_key_normal_task_buttons"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            android:title="@string/Number_of_btns"
            app:defaultValue="3"
            app:useSimpleSummaryProvider="true"/>


        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_key_normal_task_random"
            app:title="@string/random_order"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="@string/pref_key_normal_task_highlight"
            app:title="@string/highlight_next_btn" />


        <ListPreference
            app:defaultValue="1"
            app:entries="@array/size_entries"
            app:entryValues="@array/size_values"
            app:key="@string/pref_key_normal_task_size"
            app:title="@string/btn_size"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>